<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/existing_user_constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rider_bg"
        app:layout_constraintBottom_toTopOf="@+id/release_date_constraint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        tools:layout_editor_absoluteX="0dp">


        <ImageView
            android:id="@+id/top_gradient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/top_img_gradient"
            app:layout_constraintBottom_toTopOf="@+id/bottom_gradient"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="1dp"
            android:alpha="0.8"/>

        <ImageView
            android:id="@+id/bottom_gradient"
            android:layout_width="425dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="285dp"
            android:alpha="0.8"
            android:scaleType="centerCrop"
            android:src="@drawable/bottom_img_gradient"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_gradient" />

        <TextView
            android:id="@+id/ManiacText"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="390dp"
            android:fontFamily="@font/guardian_sans_black"
            android:orientation="vertical"
            android:text="@string/existing_user_heading"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/top_gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bottom_gradient"
            app:layout_constraintVertical_bias="0.307" />




    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/release_date_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/black_gradient"
        app:layout_constraintTop_toBottomOf="@+id/existing_user_constraint">


        <LinearLayout
            android:id="@+id/release_date_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
           >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/release_Date"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginStart="20dp"
                tools:layout_editor_absoluteX="13dp"
                tools:layout_editor_absoluteY="676dp" />
            <LinearLayout
                android:id="@+id/register_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/red"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:padding="2dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/dark_red"
                    android:backgroundTint="@color/dark_red"
                    android:fontFamily="@font/montserrat_bold"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/register_now"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="15dp"
                    android:layout_margin="15dp"
                    android:contentDescription="@string/right_btn"
                    android:src="@drawable/right_arrow" />
            </LinearLayout>


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/release_date_constraint"
        tools:layout_editor_absoluteX="20dp"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="30dp"
            android:layout_height="3dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/red"
            android:text="@string/empty_string"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="30dp"
            android:layout_height="3dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/participants_bg"
            android:text="@string/empty_string"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/button3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="30dp"
            android:layout_height="3dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/participants_bg"
            android:text="@string/empty_string"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


